# benchmark-saturation

./: .env.example  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  metrics_output_helm_classic.csv  pyproject.toml
.github/workflows/: tests.yml
analyzer/: README.md  requirements.txt  test_example.py
analyzer/src/benchmarks/mmlu_pro/: __init__.py  benchmark.py  run_benchmark.py  (+1 more)
analyzer/src/metrics/: __init__.py  base.py  csv_processor.py  cursor_notes.md  examples.py
data/: .gitattributes  README.md  all_datasets.json  dataset_hf_ids.csv  helm_dataset_metadata.json  manual_annotation_data.csv  parse_yaml_files_to_json.py  read_all_dataset_info.py  split_yaml_export.py
data/leaderboard_data/: .gitattributes  helm_classic_data.jsonl  hfopenllm_v2_data.jsonl  hfopenllm_v2_data_updated.jsonl  hfopenllm_v2_data_with_dates.jsonl
data/split_yaml/: all_dataset_info_part9.yaml
landingpage/: README.md
landingpage/src/: package-lock.json  package.json  webpack.config.js
landingpage/src/src/: data_connector.ts  main.ts
landingpage/web/: index.html  style.css
scripts/: analysis_age_saturation.py  calc_saturation_metrics.py  plot_age_testsize_relationship.py  requirements.txt
website/: .gitignore
website/scripts/: 01-generate_mock_figures.py  02-generate_projections.py
website/src/: package-lock.json  package.json  tsconfig.json  webpack.config.js
website/src/src/: data_connector.ts  main.ts
website/web/: index.html  style.css  web-source.js.LICENSE.txt  web-source.js.map
website/web/data/: projections.json  saturation.json
(+54 files in other folders)
